# bevy-game-jam-template

./: .ignore  Cargo.toml  README.md  index.html  web-build.sh
.github/workflows/: ci.yaml  release.yaml
assets/: challengers.ch.yaml  credits.cr.yaml  encounters.en.yaml  locations.lc.yaml  missions.ms.yaml  players.pl.yaml  story.st.yaml
assets/fonts/: LICENSE.md
assets/models/: banner_and _image.blend  base-models.blend  base-models.blend1  base-models.gltf  ground.gltf  icons.blend  icons.blend1  locations.blend  locations.blend1  mission-maps.blend  mission-maps.blend1  world-map.blend  world-map.blend1  world-map.gltf
assets/shaders/: toon_shader.wgsl
assets/textures/: color-pallet-labelled.xcf  color-pallet.xcf
src/: app_state.rs  assets.rs  lib.rs  main.rs  materialized_scene.rs  toon_material.rs
src/in_game/: factions.rs  game_completed.rs  game_over.rs  game_state.rs  mod.rs  pause_screen.rs  story.rs
src/in_game/encounter/: action_choice.rs  action_resolutions.rs  challenger.rs  dice_pools.rs  encounter_assets.rs  encounter_generation.rs  encounter_setup_types.rs  health.rs  introduction.rs  location.rs  mod.rs  player.rs  powers.rs  probability_setup.rs  sequencing.rs
src/in_game/encounter/actions/: combat.rs  mod.rs  text.rs
src/in_game/encounter/encounter_resolution/: mod.rs
src/in_game/encounter/probability_setup/: dice_pools.rs  handle_powers.rs  iter_averager.rs
src/in_game/mission/: mission_types.rs  mod.rs
src/in_game/world_map/: mod.rs
src/menus/: credits.rs  game_title.rs  loading_state.rs  menu.rs  mod.rs
src/ui/: buttons.rs  classes.rs  colors.rs  intermediary_node_bundles.rs  mod.rs
src/ui/classes/: action_classes.rs  base_classes.rs  encounter_classes.rs  map_classes.rs  mission_classes.rs  mod.rs  probability_classes.rs
wasm/: index.html
