[package]
name = "philosophical-zombies"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.10" }
leafwing-input-manager = "0.9"
bevy_proto = "0.10"
iyes_progress = "0.8"
bevy_ecs_markers = "1"
spew = "0.2"
bevy_common_assets = "0.6.0"
bevy_asset_loader = "0.16"
bevy_dolly = { git = "https://github.com/BlackPhlox/bevy_dolly", features = ["drivers"] }